Schools component styling

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -94,6 +94,7 @@
 @import 'components/results';
 @import 'components/results-total';
 @import 'components/rich-text';
+@import 'components/schools';
 @import 'components/scroll';
 @import 'components/search';
 @import 'components/search-toggle';
