--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
@@ -1,42 +1,73 @@
 {% load wagtailcore_tags %}
 
 <div class="key-details">
+
     <div class="key-details__header">
         <h3 class="heading heading--five key-details__heading">Key details</h3>
     </div>
+
     {% if page.school_dean %}
+    <div class="key-details__section key-details__section--dean">
         <h4 class="body body--two key-details__sub-heading">School Dean</h4>
-        <div class="key-details__section key-details__section--school-dean">
-            <a href="{% pageurl page.school_dean %}">{{ page.school_dean }}</a>
-        </div>
+        <ul class="key-details__list">
+            <li class="key-details__list-item">
+                <a class="link link--tertiary" href="{% pageurl page.school_dean %}">{{ page.school_dean }}</a>
+            </li>
+        </ul>
+    </div>
     {% endif %}
+
     {% if page.location %}
+    <div class="key-details__section key-details__section--location">
         <h4 class="body body--two key-details__sub-heading">Location</h4>
-    {{ page.location|richtext }}
+        <ul class="key-details__list">
+            <li class="key-details__list-item key-details__list-item--tight">
+                {{ page.location|richtext }}
+            </li>
+        </ul>
+    </div>
     {% endif %}
+
     {% if page.next_open_day_start_date %}
+    <div class="key-details__section key-details__section--date">
         <h4 class="body body--two key-details__sub-heading">Next open day</h4>
-        {% if page.next_open_day_end_date and page.next_open_day_start_date %}
-            {{ page.next_open_day_start_date|date:'d' }} - {{ page.next_open_day_end_date|date:'d F' }}
-        {% elif page.next_open_day_start_date %}
-            {{ page.next_open_day_start_date|date:'d m Y' }}
-        {% endif %}
-        {% if open_day_link %}
-            <p><a href="{{ open_day_link.get_link_url }}">{{ open_day_link.get_link_text }}</a></p>
-        {% endif %}
-    {% endif%}
+        <ul class="key-details__list">
+            {% if page.next_open_day_end_date and page.next_open_day_start_date %}
+            <li class="key-details__list-item">{{ page.next_open_day_start_date|date:'d' }} - {{ page.next_open_day_end_date|date:'d F' }}</li>
+            {% elif page.next_open_day_start_date %}
+            <li class="key-details__list-item">{{ page.next_open_day_start_date|date:'d m Y' }}</li>
+            {% endif %}
+            {% if open_day_link %}
+            <li class="key-details__list-item">
+                <a class="key-details__link link link--secondary link--link" href="{{ open_day_link.get_link_url }}">
+                    <span class="link__label">{{ open_day_link.get_link_text }}</span>
+                    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+                </a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+    {% endif %}
 
     {% if page.get_in_touch %}
+    <div class="key-details__section key-details__section--contact">
         <h4 class="body body--two key-details__sub-heading">Get in touch</h4>
-        {{ page.get_in_touch|richtext }}
+        <ul class="key-details__list">
+            <li class="key-details__list-item key-details__list-item--tight">
+                {{ page.get_in_touch|richtext }}
+            </li>
+        </ul>
+    </div>
     {% endif %}
 
     {% if page.social_links %}
-        <ul>
+    <div class="key-details__section key-details__section--social">
+        <ul class="key-details__list">
             {% for link in page.social_links %}
-                <li>{{ link }}</li>
+            <li class="key-details__list-item">{{ link|richtext }}</li>
             {% endfor %}
         </ul>
+    </div>
     {% endif %}
 
 </div>
