--- a/rca/project_styleguide/templates/patterns/molecules/instagram-feed/instagram-feed.html
+++ b/rca/project_styleguide/templates/patterns/molecules/instagram-feed/instagram-feed.html
@@ -1,1 +1,9 @@
-Instagram here
+<div class="instagram-feed">
+    <div class="instagram-feed__container grid">
+        {% for photo in instagram_feed %}
+        <div class="instagram-feed__item">
+            <img class="instagram-feed__photo" src="{{ photo.url }}" alt="{{ photo.alt }}">
+        </div>
+        {% endfor %}
+    </div>
+</div>
