--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -125,12 +125,12 @@
                 {% if instagram_feed %}
                 <div class="section__row schools__about--logos">
                     <div class="section__header grid">
-                        <h3 class="section__heading section__heading--primary heading heading--two">Latest instagram updates</h3>
-                        <div class="section__introduction">
+                        <h3 class="section__heading section__heading--primary body body--one">Latest instagram updates</h3>
+                        <div class="section__introduction body body--one">
                             <a href="#">Follow us at {{ instagram_feed.handle }}</a>
                         </div>
                     </div>
-                    <div class="section__content grid">
+                    <div class="section__content">
                         {% include "patterns/molecules/instagram-feed/instagram-feed.html" %}
                     </div>
                 </div>
