--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
@@ -1,9 +1,9 @@
 {% load wagtailimages_tags %}
 
 <div class="hero {% if modifier %}hero--{{ modifier }}{% endif %}">
-    {% image page.hero_image fill-320x285 as image_small %}
-    {% image page.hero_image fill-768x530 as image_medium %}
-    {% image page.hero_image fill-1440x530 as image_large %}
+    {% image hero_image fill-320x285 as image_small %}
+    {% image hero_image fill-768x530 as image_medium %}
+    {% image hero_image fill-1440x530 as image_large %}
 
     <img srcset="{{ image_small.url }} 320w,
                  {{ image_medium.url }} 768w,
