--- a/rca/static_src/sass/base/_layout.scss
+++ b/rca/static_src/sass/base/_layout.scss
@@ -12,7 +12,7 @@ Grid layout setup
     layout__@{{ breakpoint }}-span-{{ number }}
 - Breakpoints are medium and large
 - Numbers range from 1-5, as we use a 5 col grid for large, two columns for small and medium
-- For example: "layout__@medium-start-1 layout__@medium-span-2" would start in column one, and span two columns for medium breakpoint
+- For example: "layout__@medium-start-one layout__@medium-span-two" would start in column one, and span two columns for medium breakpoint
 - Replicates the "grid-column: number / span number" format that we've used previously
 - \@ outputs as \@ in css but html classes shouldn't include the slash
 - Used in conjunction with a parent with the .grid class or any item with display: grid on
