--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -575,4 +575,19 @@
             }
         }
     }
+
+    // School page has black sections either side of stat block
+    &.section--school-stat-block {
+        #{$root}__notch {
+            &:last-child {
+                #{$root}__notch-fill {
+                    background-color: $color--black;
+
+                    &::before {
+                        background-color: $color--black;
+                    }
+                }
+            }
+        }
+    }
 }
