--- a/rca/project_styleguide/templates/patterns/molecules/instagram-feed/instagram-feed.html
+++ b/rca/project_styleguide/templates/patterns/molecules/instagram-feed/instagram-feed.html
@@ -1,7 +1,7 @@
 <div class="instagram-feed">
     <div class="instagram-feed__container grid">
         {% for photo in instagram_feed %}
-        <div class="instagram-feed__item">
+        <div class="instagram-feed__item {% if forloop.first %}layout__@large-start-two{% endif %}">
             <img class="instagram-feed__photo" src="{{ photo.url }}" alt="{{ photo.alt }}">
         </div>
         {% endfor %}
