--- a/rca/project_styleguide/templates/patterns/organisms/school-section-footer/school-section-footer.html
+++ b/rca/project_styleguide/templates/patterns/organisms/school-section-footer/school-section-footer.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 {% if cta %}
-<div class="section__row">
+<div class="section__row section__row--last">
     {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=cta %}
 </div>
 {% endif %}
