--- a/rca/project_styleguide/templates/patterns/molecules/instagram-feed/instagram-feed.html
+++ b/rca/project_styleguide/templates/patterns/molecules/instagram-feed/instagram-feed.html
@@ -2,7 +2,9 @@
     <div class="instagram-feed__container grid">
         {% for photo in instagram_feed %}
         <div class="instagram-feed__item {% if forloop.first %}layout__@large-start-two{% endif %}">
-            <img class="instagram-feed__photo" src="{{ photo.url }}" alt="{{ photo.alt }}">
+            <a class="instagram-feed__item-link" href="{{ photo.href }}">
+                <img class="instagram-feed__item-photo" src="{{ photo.url }}" alt="{{ photo.alt }}">
+            </a>
         </div>
         {% endfor %}
     </div>
